<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/descri_camera"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toStartOf="@+id/txtFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/txtFoto"
        android:layout_width="49dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="dispatchTakePictureIntent"
        android:text="@string/txt_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descri_galeria"
        app:layout_constraintEnd_toEndOf="@+id/imgItem"
        app:layout_constraintStart_toStartOf="@+id/imgItem"
        app:layout_constraintTop_toBottomOf="@+id/imgItem"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/txtGaleria"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:onClick="pegarImagemGaleria"
        android:text="@string/txt_galeria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/txtFoto"
        app:layout_constraintTop_toBottomOf="@+id/txtFoto" />

    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descri_delete"
        app:layout_constraintEnd_toEndOf="@+id/imgGaleria"
        app:layout_constraintStart_toStartOf="@+id/imgGaleria"
        app:layout_constraintTop_toBottomOf="@+id/imgGaleria"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/txtDelete"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_remover_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/txtGaleria"
        app:layout_constraintTop_toBottomOf="@+id/txtGaleria" />

</android.support.constraint.ConstraintLayout>